--- a/webui/index.html
+++ b/webui/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/assets/img/favicon.png" />
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MCDash</title>
+    <title>TwilNodes</title>
   </head>
   <body>
     <div id="root"></div>
