--- a/webui/index.html
+++ b/webui/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/assets/img/favicon.png" />
+    <link rel="icon" type="image/png" href="/assets/img/Axolotl_Bucket.png" />
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TwilNodes</title>
+    <title>AxiNodes</title>
   </head>
   <body>
     <div id="root"></div>
